argocd/resources/wazuh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
