argocd/resources/wazuh/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "3"

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: wazuh-dashboard

  ports:
    - name: http
      port: 5601
      targetPort: http
