argocd/resources/wazuh/indexer-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer
  namespace: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: wazuh-indexer
  ports:
    - name: transport
      port: 9300
      targetPort: transport

---
apiVersion: v1
kind: Service
metadata:
  name: indexer
  namespace: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wazuh-indexer
  ports:
    - name: https
      port: 9200
      targetPort: https
