argocd/resources/wazuh/indexer-ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: wazuh-indexer
  namespace: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  entryPoints:
    - wazuhindexer

  routes:
    - match: HostSNI(`*`)
      services:
        - name: indexer
          port: 9200

  tls:
    passthrough: true
